Source/Core/Source/Drivers/include/ri1260.h

ViStatus _VI_FUNC ri1260_66_operate_single (ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 grp, ViInt16 relay);
ViStatus _VI_FUNC ri1260_75_operate_single (ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 grp, ViInt16 relay);
ViStatus _VI_FUNC ri1260_93_operate_single (ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 grp, ViInt16 relay);
ViStatus _VI_FUNC ri1260_read_status_byte (ViSession vi, ViPInt16 response);
ViStatus _VI_FUNC ri1260_read_relay_states (ViSession vi, ViInt16 module_no,
    ViPInt16 mod_type, ViAInt16 states);
ViStatus _VI_FUNC ri1260_read_card_types(ViSession vi, ViAInt16 module_type);
ViStatus _VI_FUNC ri1260_def_port_modes(ViSession vi, ViInt16 module_no,
    ViInt16 port_io_bitmask);
ViStatus _VI_FUNC ri1260_set_sync_mode(ViSession vi, ViInt16 module_no,
    ViInt16 last_sync_port);
ViStatus _VI_FUNC ri1260_handshake_polarity(ViSession vi, ViInt16 module_no,
    ViInt16 clkin, ViInt16 busy);
ViStatus _VI_FUNC ri1260_read_digio_conf(ViSession vi, ViInt16 module_no,
    ViPInt16 io_bitmask, ViPInt16 last_sync_port, ViPInt16 arm_state,
    ViPInt16 clkin, ViPInt16 busy);
ViStatus _VI_FUNC ri1260_setup_sync_read(ViSession vi, ViInt16 module_no,
    ViInt16 port, ViInt16 data_length, ViInt16 max_data);
ViStatus _VI_FUNC ri1260_setup_sync_write(ViSession vi, ViInt16 module_no,
    ViInt16 port, ViInt16 data_length, ViInt16 num_data, ViAInt32 data_array);
ViStatus _VI_FUNC ri1260_arm_digio(ViSession vi, ViInt16 module_no,
    ViInt16 arm_or_disarm);
ViStatus _VI_FUNC ri1260_read_sync_data(ViSession vi, ViInt16 module_no,
    ViInt16 port, ViInt16 max_data, ViPInt16 num_read, ViAInt32 data_array);
ViStatus _VI_FUNC ri1260_async_read(ViSession vi, ViInt16 module_no,
    ViInt16 port, ViInt16 data_length, ViPInt32 data_item);
ViStatus _VI_FUNC ri1260_async_write(ViSession vi, ViInt16 module_no,
    ViInt16 port,ViInt16 data_length, ViInt32 data_item);
ViStatus _VI_FUNC ri1260_async_bit_write(ViSession vi, ViInt16 module_no,
    ViInt16 port, ViInt16 high_bits, ViInt16 low_bits);
ViStatus _VI_FUNC ri1260_run_synchronous_test (ViSession vi, ViInt16 module,
    ViInt16 test_timeout);
ViStatus _VI_FUNC ri1260_find1260 (ViInt16 max_count, ViPInt32 ret_count,
    ViAInt16 instr_type, ViAInt16 instr_num, ViAInt16 logical_address,
    ViAInt16 slot);
ViStatus _VI_FUNC ri1260_closeAllRMSessions (void);