Source/Core/Source/Drivers/Switch/RI1260.BAS


Declare Function ri1260_66_operate_single Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal switch_num As Integer, ByVal pole As Integer) As Long

Declare Function ri1260_75_operate_single Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal grp As Integer, ByVal relay As Integer) As Long

Declare Function ri1260_93_operate_single Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal grp As Integer, ByVal relay As Integer) As Long

Declare Function ri1260_read_status_byte Lib "ri1260_32.dll" (ByVal vi As Long, response As Integer) As Long

Declare Function ri1260_read_relay_states Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module_no As Integer, mod_type As Integer, states As Integer) As Long

Declare Function ri1260_read_card_types Lib "ri1260_32.dll" (ByVal vi As Long, module_type As Integer) As Long

Declare Function ri1260_def_port_modes Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module_no As Integer, ByVal port_io_bitmask As Integer) As Long

Declare Function ri1260_set_sync_mode Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module_no As Integer, ByVal last_sync_port As Integer) As Long

Declare Function ri1260_handshake_polarity Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module_no As Integer, ByVal clkin As Integer, ByVal busy As Integer) As Long

Declare Function ri1260_read_digio_conf Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module_no As Integer, io_bitmask As Integer, last_sync_port As Integer, arm_state As Integer, clkin As Integer, busy As Integer) As Long

Declare Function ri1260_setup_sync_read Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module_no As Integer, ByVal port As Integer, ByVal data_length As Integer, ByVal max_data As Integer) As Long

Declare Function ri1260_setup_sync_write Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module_no As Integer, ByVal port As Integer, ByVal data_length As Integer, ByVal num_data As Integer, data_array As Long) As Long

Declare Function ri1260_arm_digio Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module_no As Integer, ByVal arm_or_disarm As Integer) As Long

Declare Function ri1260_read_sync_data Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module_no As Integer, ByVal port As Integer, ByVal max_data As Integer, num_read As Integer, data_array As Long) As Long

Declare Function ri1260_async_read Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module_no As Integer, ByVal port As Integer, ByVal data_length As Integer, data_item As Long) As Long

Declare Function ri1260_async_write Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module_no As Integer, ByVal port As Integer, ByVal data_length As Integer, data_item As Long) As Long

Declare Function ri1260_async_bit_write Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module_no As Integer, ByVal port As Integer, ByVal high_bits As Integer, ByVal low_bits As Integer) As Long

Declare Function ri1260_run_synchronous_test Lib "ri1260_32.dll" (ByVal vi As Long, ByVal module As Integer, ByVal test_timeout As Integer) As Long

Declare Function ri1260_find1260 Lib "ri1260_32.dll" (ByVal max_count As Integer, ret_count As Long, instr_type As Integer, instr_num As Integer, logical_address As Integer, slot As Integer) As Long

Declare Function ri1260_closeAllRMSessions Lib "ri1260_32.dll" () As Long



